[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "winpath"
author = "Alberto J. Marin"
author-email = "alberto@ajmar.in"
home-page = "https://github.com/git-albertomarin/winpath"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Filesystems",
    "Topic :: System",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires = []
description-file = "README.md"
requires-python = ">=3.0"

[tool.flit.metadata.urls]
Documentation = "https://github.com/git-albertomarin/winpath"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.0.0",
    "pytest-cov",
    "mypy",
    "codecov",
    "black",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
]
dev = [
    "tox",
    "pycalver",
    "flake8",
    "black",
    "twine",
    "wheel",
    "pre-commit",
]
all = []

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.venv36
  | _build
  | buck-out
  | build
  | dist
)/
'''


[pycalver]
current_version = "v202002.0002"
version_pattern = "{pycalver}"
commit = true
tag = true
push = true

[pycalver.file_patterns]
"pyproject.toml" = [
    'current_version = "{pycalver}"',
]

"winpath/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
